# whale-api-deprecated

./: Dockerfile  README.md  appspec.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
ci/docker/: Dockerfile
scripts/: install_dependencies.sh  start_server.sh
src/: app.py  main.py
src/adapters/: coin_market_cap.py  mempool.py  ta_api.py  taapi.py
src/controllers/: http.py
src/core/models/: requests.py  responses.py
src/core/ports/: DataPort.py
src/core/usecases/: address_txs_balance_sheet.py  address_wealth.py
src/ports/: DataPort.py
tests/: conftest.py  test_endpoint.py
