[tool.poetry]
name = "whale-api"
version = "0.1.0"
description = ""
authors = ["Sebastian Wdowiarz <wdowiarzsebastian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
mypy = "^0.971"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
